[package]
name = "chainhead-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpsee = { version = "0.21", features = ["async-client", "client-ws-transport-native-tls"] }
serde_json = { version = "1.0" }
clap = { version = "4.4", features = ["derive", "cargo"] }
tokio = { version = "1.35", features = ["macros", "time", "rt-multi-thread"] }
serde = { version = "1.0.195" }
